# verbose-umbrella

./: .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml
configs/: models.yaml  pipeline.yaml
configs/schemas/: default_document.schema.json
data/output/: result.json
notebooks/: parsing-output-json-to-sqlite.md
scripts/: db_schema_ddl.py  import_pdf_json.py
src/pdf_json_parser/: __init__.py  __main__.py
src/pdf_json_parser/cli/: app.py
src/pdf_json_parser/core/: pipeline.py
src/pdf_json_parser/models/: document.py  extraction.py  geometry.py
src/pdf_json_parser/parsers/: base.py  camelot_parser.py  docling_parser.py  paddleocr_parser.py  pdfplumber_parser.py  pymupdf_parser.py  surya_parser.py
src/pdf_json_parser/stages/: extract_schema.py  merge_candidates.py  score_result.py  validate_json.py
tests/: test_camelot_parser.py  test_docling_parser.py  test_merge_candidates.py  test_pdfplumber_parser.py  test_pipeline_parser_selection.py  test_pymupdf_parser.py  test_surya_parser.py
